07-troubleshooting/ingress-not-working/yaml/3.1-broken-service-no-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-broken
spec:
  selector:
    app: wrong-frontend
  ports:
  - port: 80
    targetPort: 80
