07-troubleshooting/ingress-not-working/yaml/correct-service-has-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixed-api-service
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
