07-troubleshooting/ingress-not-working/yaml/3.2-ingress-to-correct-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: correct-endpoints-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
