07-troubleshooting/ingress-not-working/yaml/broken-ingress-wrong-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wrong-path-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
